STAR-1289_update_market_presets

--- a/presets/america.yaml
+++ b/presets/america.yaml
@@ -20,13 +20,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: large_cap
   filter:
   - left: exchange
@@ -47,13 +47,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: small_cap
   filter:
   - left: exchange
@@ -74,13 +74,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: largest_employers
   filter:
   - left: exchange
@@ -103,13 +103,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: number_of_employees
-    operation: nempty
   sort:
     sortBy: number_of_employees
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: high_dividend
   filter:
   - left: exchange
@@ -133,13 +133,13 @@ presets:
   - left: dividend_yield_recent
     operation: greater
     right: 0
-  - left: dividend_yield_recent
-    operation: nempty
   sort:
     sortBy: dividend_yield_recent
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: highest_net_income
   filter:
   - left: exchange
@@ -160,13 +160,40 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: net_income
-    operation: nempty
   sort:
     sortBy: net_income
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
+- name: highest_cash
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  sort:
+    sortBy: cash_n_short_term_invest_fq
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - america
 - name: gainers
   filter:
   - left: exchange
@@ -195,13 +222,13 @@ presets:
   - left: change
     operation: greater
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: losers
   filter:
   - left: exchange
@@ -230,14 +257,14 @@ presets:
   - left: change
     operation: less
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: volume_leaders
+  markets:
+  - america
+- name: active
   filter:
   - left: exchange
     operation: in_range
@@ -262,13 +289,13 @@ presets:
     right:
     - 2
     - 10000
-  - left: volume
-    operation: nempty
   sort:
     sortBy: volume
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: unusual_volume
   filter:
   - left: exchange
@@ -289,13 +316,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: relative_volume_10d_calc
-    operation: nempty
   sort:
     sortBy: relative_volume_10d_calc
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: most_volatile
   filter:
   - left: exchange
@@ -316,13 +343,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: Volatility.D
-    operation: nempty
   sort:
     sortBy: Volatility.D
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: high_beta
   filter:
   - left: exchange
@@ -345,13 +372,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: beta_1_year
-    operation: nempty
   sort:
     sortBy: beta_1_year
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: best_performing
   filter:
   - left: exchange
@@ -374,13 +401,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: Perf.Y
-    operation: nempty
   sort:
     sortBy: Perf.Y
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: highest_revenue
   filter:
   - left: exchange
@@ -401,13 +428,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: total_revenue
-    operation: nempty
   sort:
     sortBy: total_revenue
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: most_expensive
   filter:
   - left: exchange
@@ -430,13 +457,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: penny_stocks
   filter:
   - left: exchange
@@ -457,13 +484,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: overbought
   filter:
   - left: exchange
@@ -487,13 +514,13 @@ presets:
   - left: RSI
     operation: greater
     right: 70
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
-    sortOrder: asc
+    sortBy: RSI
+    sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: oversold
   filter:
   - left: exchange
@@ -517,13 +544,13 @@ presets:
   - left: RSI
     operation: less
     right: 30
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
+    sortBy: RSI
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: all_time_high
   filter:
   - left: exchange
@@ -547,13 +574,13 @@ presets:
   - left: High.All
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: all_time_low
   filter:
   - left: exchange
@@ -577,13 +604,13 @@ presets:
   - left: Low.All
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: above_52wk_high
   filter:
   - left: exchange
@@ -607,13 +634,13 @@ presets:
   - left: price_52_week_high
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - america
 - name: below_52wk_low
   filter:
   - left: exchange
@@ -637,14 +664,14 @@ presets:
   - left: price_52_week_low
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: pre-market-gainers
+  markets:
+  - america
+- name: pre_market_gainers
   filter:
   - left: exchange
     operation: in_range
@@ -664,11 +691,6 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 2
-    - 10000
   - left: premarket_change
     operation: greater
     right: 0
@@ -679,7 +701,9 @@ presets:
     sortOrder: desc
   options:
     active_symbols_only: true
-- name: pre-market-losers
+  markets:
+  - america
+- name: pre_market_losers
   filter:
   - left: exchange
     operation: in_range
@@ -699,11 +723,6 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 2
-    - 10000
   - left: premarket_change
     operation: less
     right: 0
@@ -714,3 +733,183 @@ presets:
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - america
+- name: active_pre_market_stocks
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: premarket_volume
+    operation: nempty
+  sort:
+    sortBy: premarket_volume
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - america
+- name: pre_market_gappers
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: premarket_gap
+    operation: nempty
+  sort:
+    sortBy: premarket_gap
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - america
+- name: after_hours_gainers
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: postmarket_change
+    operation: greater
+    right: 0
+  - left: postmarket_change
+    operation: nempty
+  sort:
+    sortBy: postmarket_change
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - america
+- name: after_hours_losers
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: postmarket_change
+    operation: less
+    right: 0
+  - left: postmarket_change
+    operation: nempty
+  sort:
+    sortBy: postmarket_change
+    sortOrder: asc
+  options:
+    active_symbols_only: true
+  markets:
+  - america
+- name: active_after_hours_stocks
+  filter:
+  - left: exchange
+    operation: in_range
+    right:
+    - AMEX
+    - NASDAQ
+    - NYSE
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: postmarket_volume
+    operation: nempty
+  sort:
+    sortBy: postmarket_volume
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - america
+- name: pink_sheet_stocks
+  filter:
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: preferred
+  - left: type
+    operation: equal
+    right: stock
+  - left: exchange
+    operation: equal
+    right: OTC
+  - left: submarket
+    operation: equal
+    right: PINK
+  sort:
+    sortBy: market_cap_basic
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - america
