--- a/presets/norway.yaml
+++ b/presets/norway.yaml
@@ -11,13 +11,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: large_cap
   filter:
   - left: is_primary
@@ -29,13 +29,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: small_cap
   filter:
   - left: is_primary
@@ -47,13 +47,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: largest_employers
   filter:
   - left: is_primary
@@ -67,13 +67,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: number_of_employees
-    operation: nempty
   sort:
     sortBy: number_of_employees
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: high_dividend
   filter:
   - left: is_primary
@@ -88,13 +88,13 @@ presets:
   - left: dividend_yield_recent
     operation: greater
     right: 0
-  - left: dividend_yield_recent
-    operation: nempty
   sort:
     sortBy: dividend_yield_recent
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: highest_net_income
   filter:
   - left: is_primary
@@ -106,13 +106,31 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: net_income
-    operation: nempty
   sort:
     sortBy: net_income
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
+- name: highest_cash
+  filter:
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: type
+    operation: equal
+    right: stock
+  sort:
+    sortBy: cash_n_short_term_invest_fq
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - norway
 - name: gainers
   filter:
   - left: is_primary
@@ -132,13 +150,13 @@ presets:
   - left: change
     operation: greater
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: losers
   filter:
   - left: is_primary
@@ -158,14 +176,14 @@ presets:
   - left: change
     operation: less
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: volume_leaders
+  markets:
+  - norway
+- name: active
   filter:
   - left: is_primary
     operation: equal
@@ -181,13 +199,13 @@ presets:
     right:
     - 0.5
     - 10000
-  - left: volume
-    operation: nempty
   sort:
     sortBy: volume
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: unusual_volume
   filter:
   - left: is_primary
@@ -199,13 +217,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: relative_volume_10d_calc
-    operation: nempty
   sort:
     sortBy: relative_volume_10d_calc
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: most_volatile
   filter:
   - left: is_primary
@@ -217,13 +235,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: Volatility.D
-    operation: nempty
   sort:
     sortBy: Volatility.D
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: high_beta
   filter:
   - left: is_primary
@@ -237,13 +255,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: beta_1_year
-    operation: nempty
   sort:
     sortBy: beta_1_year
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: best_performing
   filter:
   - left: is_primary
@@ -257,13 +275,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: Perf.Y
-    operation: nempty
   sort:
     sortBy: Perf.Y
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: highest_revenue
   filter:
   - left: is_primary
@@ -275,13 +293,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: total_revenue
-    operation: nempty
   sort:
     sortBy: total_revenue
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: most_expensive
   filter:
   - left: is_primary
@@ -295,13 +313,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: penny_stocks
   filter:
   - left: is_primary
@@ -313,13 +331,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: overbought
   filter:
   - left: is_primary
@@ -334,13 +352,13 @@ presets:
   - left: RSI
     operation: greater
     right: 70
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
-    sortOrder: asc
+    sortBy: RSI
+    sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: oversold
   filter:
   - left: is_primary
@@ -355,13 +373,13 @@ presets:
   - left: RSI
     operation: less
     right: 30
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
+    sortBy: RSI
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: all_time_high
   filter:
   - left: is_primary
@@ -376,13 +394,13 @@ presets:
   - left: High.All
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: all_time_low
   filter:
   - left: is_primary
@@ -397,13 +415,13 @@ presets:
   - left: Low.All
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: above_52wk_high
   filter:
   - left: is_primary
@@ -418,13 +436,13 @@ presets:
   - left: price_52_week_high
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - norway
 - name: below_52wk_low
   filter:
   - left: is_primary
@@ -439,62 +457,10 @@ presets:
   - left: price_52_week_low
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: pre-market-gainers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: type
-    operation: equal
-    right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 0.5
-    - 10000
-  - left: premarket_change
-    operation: greater
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: desc
-  options:
-    active_symbols_only: true
-- name: pre-market-losers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: type
-    operation: equal
-    right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 0.5
-    - 10000
-  - left: premarket_change
-    operation: less
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: asc
-  options:
-    active_symbols_only: true
+  markets:
+  - norway
