--- a/presets/brazil.yaml
+++ b/presets/brazil.yaml
@@ -14,13 +14,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: large_cap
   filter:
   - left: is_primary
@@ -35,13 +35,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: small_cap
   filter:
   - left: is_primary
@@ -56,13 +56,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: largest_employers
   filter:
   - left: is_primary
@@ -79,13 +79,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: number_of_employees
-    operation: nempty
   sort:
     sortBy: number_of_employees
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: high_dividend
   filter:
   - left: is_primary
@@ -103,13 +103,13 @@ presets:
   - left: dividend_yield_recent
     operation: greater
     right: 0
-  - left: dividend_yield_recent
-    operation: nempty
   sort:
     sortBy: dividend_yield_recent
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: highest_net_income
   filter:
   - left: is_primary
@@ -124,13 +124,34 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: net_income
-    operation: nempty
   sort:
     sortBy: net_income
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
+- name: highest_cash
+  filter:
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: odd
+  - left: type
+    operation: equal
+    right: stock
+  sort:
+    sortBy: cash_n_short_term_invest_fq
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - brazil
 - name: gainers
   filter:
   - left: is_primary
@@ -148,13 +169,13 @@ presets:
   - left: change
     operation: greater
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: losers
   filter:
   - left: is_primary
@@ -172,14 +193,14 @@ presets:
   - left: change
     operation: less
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: volume_leaders
+  markets:
+  - brazil
+- name: active
   filter:
   - left: is_primary
     operation: equal
@@ -193,13 +214,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: volume
-    operation: nempty
   sort:
     sortBy: volume
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: unusual_volume
   filter:
   - left: is_primary
@@ -214,13 +235,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: relative_volume_10d_calc
-    operation: nempty
   sort:
     sortBy: relative_volume_10d_calc
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: most_volatile
   filter:
   - left: is_primary
@@ -235,13 +256,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: Volatility.D
-    operation: nempty
   sort:
     sortBy: Volatility.D
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: high_beta
   filter:
   - left: is_primary
@@ -258,13 +279,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: beta_1_year
-    operation: nempty
   sort:
     sortBy: beta_1_year
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: best_performing
   filter:
   - left: is_primary
@@ -281,13 +302,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: Perf.Y
-    operation: nempty
   sort:
     sortBy: Perf.Y
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: highest_revenue
   filter:
   - left: is_primary
@@ -302,13 +323,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: total_revenue
-    operation: nempty
   sort:
     sortBy: total_revenue
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: most_expensive
   filter:
   - left: is_primary
@@ -325,13 +346,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: penny_stocks
   filter:
   - left: is_primary
@@ -346,13 +367,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: overbought
   filter:
   - left: is_primary
@@ -370,13 +391,13 @@ presets:
   - left: RSI
     operation: greater
     right: 70
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
-    sortOrder: asc
+    sortBy: RSI
+    sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: oversold
   filter:
   - left: is_primary
@@ -394,13 +415,13 @@ presets:
   - left: RSI
     operation: less
     right: 30
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
+    sortBy: RSI
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: all_time_high
   filter:
   - left: is_primary
@@ -418,13 +439,13 @@ presets:
   - left: High.All
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: all_time_low
   filter:
   - left: is_primary
@@ -442,13 +463,13 @@ presets:
   - left: Low.All
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: above_52wk_high
   filter:
   - left: is_primary
@@ -466,13 +487,13 @@ presets:
   - left: price_52_week_high
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - brazil
 - name: below_52wk_low
   filter:
   - left: is_primary
@@ -490,58 +511,10 @@ presets:
   - left: price_52_week_low
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: pre-market-gainers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: typespecs
-    operation: has_none_of
-    right: odd
-  - left: type
-    operation: equal
-    right: stock
-  - left: premarket_change
-    operation: greater
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: desc
-  options:
-    active_symbols_only: true
-- name: pre-market-losers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: typespecs
-    operation: has_none_of
-    right: odd
-  - left: type
-    operation: equal
-    right: stock
-  - left: premarket_change
-    operation: less
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: asc
-  options:
-    active_symbols_only: true
+  markets:
+  - brazil
