--- a/presets/russia.yaml
+++ b/presets/russia.yaml
@@ -11,13 +11,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: large_cap
   filter:
   - left: typespecs
@@ -29,13 +29,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: small_cap
   filter:
   - left: typespecs
@@ -47,13 +47,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: largest_employers
   filter:
   - left: typespecs
@@ -67,13 +67,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: number_of_employees
-    operation: nempty
   sort:
     sortBy: number_of_employees
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: high_dividend
   filter:
   - left: typespecs
@@ -88,13 +88,13 @@ presets:
   - left: dividend_yield_recent
     operation: greater
     right: 0
-  - left: dividend_yield_recent
-    operation: nempty
   sort:
     sortBy: dividend_yield_recent
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: highest_net_income
   filter:
   - left: typespecs
@@ -106,13 +106,31 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: net_income
-    operation: nempty
   sort:
     sortBy: net_income
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
+- name: highest_cash
+  filter:
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: foreign-issuer
+  - left: type
+    operation: equal
+    right: stock
+  sort:
+    sortBy: cash_n_short_term_invest_fq
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - russia
 - name: gainers
   filter:
   - left: typespecs
@@ -127,13 +145,13 @@ presets:
   - left: change
     operation: greater
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: losers
   filter:
   - left: typespecs
@@ -148,14 +166,14 @@ presets:
   - left: change
     operation: less
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: volume_leaders
+  markets:
+  - russia
+- name: active
   filter:
   - left: typespecs
     operation: has
@@ -166,13 +184,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: volume
-    operation: nempty
   sort:
     sortBy: volume
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: unusual_volume
   filter:
   - left: typespecs
@@ -184,13 +202,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: relative_volume_10d_calc
-    operation: nempty
   sort:
     sortBy: relative_volume_10d_calc
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: most_volatile
   filter:
   - left: typespecs
@@ -202,13 +220,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: Volatility.D
-    operation: nempty
   sort:
     sortBy: Volatility.D
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: high_beta
   filter:
   - left: typespecs
@@ -222,13 +240,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: beta_1_year
-    operation: nempty
   sort:
     sortBy: beta_1_year
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: best_performing
   filter:
   - left: typespecs
@@ -242,13 +260,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: Perf.Y
-    operation: nempty
   sort:
     sortBy: Perf.Y
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: highest_revenue
   filter:
   - left: typespecs
@@ -260,13 +278,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: total_revenue
-    operation: nempty
   sort:
     sortBy: total_revenue
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: most_expensive
   filter:
   - left: typespecs
@@ -280,13 +298,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: penny_stocks
   filter:
   - left: typespecs
@@ -298,13 +316,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: overbought
   filter:
   - left: typespecs
@@ -319,13 +337,13 @@ presets:
   - left: RSI
     operation: greater
     right: 70
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
-    sortOrder: asc
+    sortBy: RSI
+    sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: oversold
   filter:
   - left: typespecs
@@ -340,13 +358,13 @@ presets:
   - left: RSI
     operation: less
     right: 30
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
+    sortBy: RSI
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: all_time_high
   filter:
   - left: typespecs
@@ -361,13 +379,13 @@ presets:
   - left: High.All
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: all_time_low
   filter:
   - left: typespecs
@@ -382,13 +400,13 @@ presets:
   - left: Low.All
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: above_52wk_high
   filter:
   - left: typespecs
@@ -403,13 +421,13 @@ presets:
   - left: price_52_week_high
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - russia
 - name: below_52wk_low
   filter:
   - left: typespecs
@@ -424,52 +442,10 @@ presets:
   - left: price_52_week_low
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: pre-market-gainers
-  filter:
-  - left: typespecs
-    operation: has
-    right: common
-  - left: typespecs
-    operation: has_none_of
-    right: foreign-issuer
-  - left: type
-    operation: equal
-    right: stock
-  - left: premarket_change
-    operation: greater
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: desc
-  options:
-    active_symbols_only: true
-- name: pre-market-losers
-  filter:
-  - left: typespecs
-    operation: has
-    right: common
-  - left: typespecs
-    operation: has_none_of
-    right: foreign-issuer
-  - left: type
-    operation: equal
-    right: stock
-  - left: premarket_change
-    operation: less
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: asc
-  options:
-    active_symbols_only: true
+  markets:
+  - russia
