--- a/presets/south_africa.yaml
+++ b/presets/south_africa.yaml
@@ -17,7 +17,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: large_cap
   filter:
   - left: is_primary
@@ -35,7 +35,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: small_cap
   filter:
   - left: is_primary
@@ -53,7 +53,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: largest_employers
   filter:
   - left: is_primary
@@ -73,7 +73,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: high_dividend
   filter:
   - left: is_primary
@@ -94,7 +94,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: highest_net_income
   filter:
   - left: is_primary
@@ -112,7 +112,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: highest_cash
   filter:
   - left: is_primary
@@ -130,7 +130,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: gainers
   filter:
   - left: is_primary
@@ -146,7 +146,7 @@ presets:
     operation: in_range
     right:
     - 1
-    - 10000
+    - 20000
   - left: change
     operation: greater
     right: 0
@@ -156,7 +156,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: losers
   filter:
   - left: is_primary
@@ -172,7 +172,7 @@ presets:
     operation: in_range
     right:
     - 1
-    - 10000
+    - 20000
   - left: change
     operation: less
     right: 0
@@ -182,7 +182,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: active
   filter:
   - left: is_primary
@@ -198,14 +198,14 @@ presets:
     operation: in_range
     right:
     - 1
-    - 10000
+    - 20000
   sort:
     sortBy: volume
     sortOrder: desc
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: unusual_volume
   filter:
   - left: is_primary
@@ -223,7 +223,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: most_volatile
   filter:
   - left: is_primary
@@ -241,7 +241,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: high_beta
   filter:
   - left: is_primary
@@ -261,7 +261,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: best_performing
   filter:
   - left: is_primary
@@ -281,7 +281,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: highest_revenue
   filter:
   - left: is_primary
@@ -299,7 +299,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: most_expensive
   filter:
   - left: is_primary
@@ -319,7 +319,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: penny_stocks
   filter:
   - left: is_primary
@@ -337,7 +337,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: overbought
   filter:
   - left: is_primary
@@ -358,7 +358,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: oversold
   filter:
   - left: is_primary
@@ -379,7 +379,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: all_time_high
   filter:
   - left: is_primary
@@ -400,7 +400,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: all_time_low
   filter:
   - left: is_primary
@@ -421,7 +421,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: above_52wk_high
   filter:
   - left: is_primary
@@ -442,7 +442,7 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
 - name: below_52wk_low
   filter:
   - left: is_primary
@@ -463,4 +463,4 @@ presets:
   options:
     active_symbols_only: true
   markets:
-  - germany
+  - rsa
