--- a/presets/uk.yaml
+++ b/presets/uk.yaml
@@ -14,13 +14,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: large_cap
   filter:
   - left: is_primary
@@ -35,13 +35,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: small_cap
   filter:
   - left: is_primary
@@ -56,13 +56,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: market_cap_basic
-    operation: nempty
   sort:
     sortBy: market_cap_basic
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: largest_employers
   filter:
   - left: is_primary
@@ -79,13 +79,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: number_of_employees
-    operation: nempty
   sort:
     sortBy: number_of_employees
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: high_dividend
   filter:
   - left: is_primary
@@ -103,13 +103,13 @@ presets:
   - left: dividend_yield_recent
     operation: greater
     right: 0
-  - left: dividend_yield_recent
-    operation: nempty
   sort:
     sortBy: dividend_yield_recent
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: highest_net_income
   filter:
   - left: is_primary
@@ -124,13 +124,34 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: net_income
-    operation: nempty
   sort:
     sortBy: net_income
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
+- name: highest_cash
+  filter:
+  - left: is_primary
+    operation: equal
+    right: true
+  - left: typespecs
+    operation: has
+    right: common
+  - left: typespecs
+    operation: has_none_of
+    right: cdi
+  - left: type
+    operation: equal
+    right: stock
+  sort:
+    sortBy: cash_n_short_term_invest_fq
+    sortOrder: desc
+  options:
+    active_symbols_only: true
+  markets:
+  - uk
 - name: gainers
   filter:
   - left: is_primary
@@ -153,13 +174,13 @@ presets:
   - left: change
     operation: greater
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: losers
   filter:
   - left: is_primary
@@ -182,14 +203,14 @@ presets:
   - left: change
     operation: less
     right: 0
-  - left: change
-    operation: nempty
   sort:
     sortBy: change
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: volume_leaders
+  markets:
+  - uk
+- name: active
   filter:
   - left: is_primary
     operation: equal
@@ -208,13 +229,13 @@ presets:
     right:
     - 2
     - 10000
-  - left: volume
-    operation: nempty
   sort:
     sortBy: volume
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: unusual_volume
   filter:
   - left: is_primary
@@ -229,13 +250,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: relative_volume_10d_calc
-    operation: nempty
   sort:
     sortBy: relative_volume_10d_calc
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: most_volatile
   filter:
   - left: is_primary
@@ -250,13 +271,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: Volatility.D
-    operation: nempty
   sort:
     sortBy: Volatility.D
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: high_beta
   filter:
   - left: is_primary
@@ -273,13 +294,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: beta_1_year
-    operation: nempty
   sort:
     sortBy: beta_1_year
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: best_performing
   filter:
   - left: is_primary
@@ -296,13 +317,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: Perf.Y
-    operation: nempty
   sort:
     sortBy: Perf.Y
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: highest_revenue
   filter:
   - left: is_primary
@@ -317,13 +338,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: total_revenue
-    operation: nempty
   sort:
     sortBy: total_revenue
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: most_expensive
   filter:
   - left: is_primary
@@ -340,13 +361,13 @@ presets:
     right: stock
   - left: market_cap_basic
     operation: nempty
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: penny_stocks
   filter:
   - left: is_primary
@@ -361,13 +382,13 @@ presets:
   - left: type
     operation: equal
     right: stock
-  - left: close
-    operation: nempty
   sort:
     sortBy: close
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: overbought
   filter:
   - left: is_primary
@@ -385,13 +406,13 @@ presets:
   - left: RSI
     operation: greater
     right: 70
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
-    sortOrder: asc
+    sortBy: RSI
+    sortOrder: desc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: oversold
   filter:
   - left: is_primary
@@ -409,13 +430,13 @@ presets:
   - left: RSI
     operation: less
     right: 30
-  - left: name
-    operation: nempty
   sort:
-    sortBy: name
+    sortBy: RSI
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: all_time_high
   filter:
   - left: is_primary
@@ -433,13 +454,13 @@ presets:
   - left: High.All
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: all_time_low
   filter:
   - left: is_primary
@@ -457,13 +478,13 @@ presets:
   - left: Low.All
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: above_52wk_high
   filter:
   - left: is_primary
@@ -481,13 +502,13 @@ presets:
   - left: price_52_week_high
     operation: eless
     right: high
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
+  markets:
+  - uk
 - name: below_52wk_low
   filter:
   - left: is_primary
@@ -505,68 +526,10 @@ presets:
   - left: price_52_week_low
     operation: egreater
     right: low
-  - left: name
-    operation: nempty
   sort:
     sortBy: name
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: pre-market-gainers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: typespecs
-    operation: has_none_of
-    right: cdi
-  - left: type
-    operation: equal
-    right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 2
-    - 10000
-  - left: premarket_change
-    operation: greater
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: desc
-  options:
-    active_symbols_only: true
-- name: pre-market-losers
-  filter:
-  - left: is_primary
-    operation: equal
-    right: true
-  - left: typespecs
-    operation: has
-    right: common
-  - left: typespecs
-    operation: has_none_of
-    right: cdi
-  - left: type
-    operation: equal
-    right: stock
-  - left: close
-    operation: in_range
-    right:
-    - 2
-    - 10000
-  - left: premarket_change
-    operation: less
-    right: 0
-  - left: premarket_change
-    operation: nempty
-  sort:
-    sortBy: premarket_change
-    sortOrder: asc
-  options:
-    active_symbols_only: true
+  markets:
+  - uk
