--- a/presets/america.yaml
+++ b/presets/america.yaml
@@ -1,4 +1,3 @@
----
 presets:
 - name: all_stocks
   filter:
@@ -625,7 +624,7 @@ presets:
     sortOrder: asc
   options:
     active_symbols_only: true
-- name: pre_market_gainers
+- name: pre-market-gainers
   filter:
   - left: exchange
     operation: in_range
@@ -655,7 +654,7 @@ presets:
     sortOrder: desc
   options:
     active_symbols_only: true
-- name: pre_market_losers
+- name: pre-market-losers
   filter:
   - left: exchange
     operation: in_range
