--- a/presets/cfd.yaml
+++ b/presets/cfd.yaml
@@ -1,43 +1,38 @@
 ---
 presets:
 - name: cfd_all
-  symbols:
-    query:
-      types:
-        - cfd
   sort:
     sortBy: name
     sortOrder: asc
-- name: cfd_agricultural
   symbols:
     query:
       types:
         - cfd
+- name: cfd_agricultural
   filter:
-    - left: sector
-      operation: equal
-      right: Agricultural
+  - left: sector
+    operation: equal
+    right: Agricultural
+  symbols:
+    query:
+      types:
+        - cfd
   sort:
     sortBy: name
     sortOrder: asc
 - name: cfd_energy
   filter:
-    - left: sector
-      operation: equal
-      right: Energy
-  symbols:
-    query:
-      types:
-        - cfd
+  - left: sector
+    operation: equal
+    right: Energy
   sort:
     sortBy: name
     sortOrder: asc
--
-  name: cfd_metals
+- name: cfd_metals
   filter:
-    - left: sector
-      operation: equal
-      right: Metals
+  - left: sector
+    operation: equal
+    right: Metals
   symbols:
     query:
       types:
@@ -47,9 +42,9 @@ presets:
     sortOrder: asc
 - name: cfd_world_indices
   filter:
-    - left: sector
-      operation: equal
-      right: index
+  - left: sector
+    operation: equal
+    right: index
   symbols:
     query:
       types:
@@ -59,17 +54,17 @@ presets:
     sortOrder: asc
 - name: indices_major
   filter:
-    - left: sector
-      operation: equal
-      right: index
+  - left: sector
+    operation: equal
+    right: index
   sort:
     sortBy: index_priority
     sortOrder: asc
 - name: indices_currency
   filter:
-    - left: sector
-      operation: equal
-      right: currency
+  - left: sector
+    operation: equal
+    right: currency
   sort:
     sortBy: index_priority
     sortOrder: asc
